# fractalbot

./: .gitattributes  .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix  fractalbot.nix
.github/workflows/: build.yml  post.yml
fractalbot-post/: Cargo.toml
fractalbot-post/src/: client.rs  lib.rs
nix/: Cargo.nix  fractalbot.nix  julia.nix  overlays.nix
src/: bounding_box.rs  color.rs  complex.rs  distance_estimation.rs  env.rs  inverse_iteration.rs  main.rs  post.rs  retry.rs
