[package]
name = "fractalbot"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
cgmath = { version = "0.18.0", features = ["rand"] }
futures-retry = "0.6.0"
image = { version = "0.25.1", default-features = false, features = ["png"] }
megalodon = { version = "0.13.3", features = ["rustls-tls"] }
num-complex = { version = "0.4.4", features = ["rand"] }
rand = "0.8.5"
rand_distr = "0.4.3"
tokio = { version = "1.34.0", default-features = false }
rayon = "1.8.0"
log = "0.4.20"
env_logger = "0.11.3"
humansize = { version = "2.1.3", features = ["no_alloc"] }
futures = "0.3.30"
indoc = "2.0.5"
