[package]
name = "fractalbot"
version = "0.3.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
cgmath = { version = "0.18.0", features = ["rand"] }
fractalbot-post = { path = "./fractalbot-post" }
image = { version = "0.25.1", default-features = false, features = ["png"] }
num-complex = { version = "0.4.4", features = ["rand"] }
rand = "0.8.5"
rand_distr = "0.4.3"
tokio = { version = "1.34.0", default-features = false }
rayon = "1.8.0"
log = "0.4.20"
env_logger = "0.11.3"
humansize = { version = "2.1.3", features = ["no_alloc"] }
indoc = "2.0.5"
