[package]
name = "fractalbot"
version = "0.3.2"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
cgmath = "0.18.0"
fractalbot-post = { path = "./fractalbot-post" }
image = { version = "0.25.1", default-features = false, features = ["png"] }
num-complex = "0.4.4"
rand = "0.9.0"
rand_distr = "0.5.1"
tokio = { version = "1.34.0", default-features = false }
rayon = "1.8.0"
log = "0.4.20"
env_logger = "0.11.3"
humansize = { version = "2.1.3", features = ["no_alloc"] }
indoc = "2.0.5"
